# flask-test

./: main.py  pyproject.toml  test.py
instance/: site.db
main/: __init__.py  config.py  models.py
main/main/: routes.py
main/posts/: forms.py  routes.py
main/static/: main.css
main/templates/: about.html  account.html  create_post.html  home.html  layout.html  login.html  post.html  register.html  user_posts.html
main/templates/errors/: 403.html  404.html  500.html
main/users/: forms.py  routes.py  utils.py
