[project]
name = "flask-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "flask-wtf>=1.2.2",
    "flask-bcrypt>=1.0.1",
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "pillow>=11.0.0",
    "flask-mail>=0.10.0",
    "itsdangerous>=2.2.0",
]
